// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render with defaults 1`] = `
<Text
  baseline={true}
  size="standard"
>
  Hello
</Text>
`;

exports[`Text sizes should render as heading 1`] = `
<Text
  baseline={true}
  size="heading"
>
  Hello
</Text>
`;

exports[`Text sizes should render as heading 2`] = `
<Text
  baseline={true}
  size="heading"
>
  Hello
</Text>
`;

exports[`Text sizes should render as headline 1`] = `
<Text
  baseline={true}
  size="headline"
>
  Hello
</Text>
`;

exports[`Text sizes should render as headline 2`] = `
<Text
  baseline={true}
  size="headline"
>
  Hello
</Text>
`;

exports[`Text sizes should render as hero 1`] = `
<Text
  baseline={true}
  size="hero"
>
  Hello
</Text>
`;

exports[`Text sizes should render as hero 2`] = `
<Text
  baseline={true}
  size="hero"
>
  Hello
</Text>
`;

exports[`Text sizes should render as small 1`] = `
<Text
  baseline={true}
  size="small"
>
  Hello
</Text>
`;

exports[`Text sizes should render as small 2`] = `
<Text
  baseline={true}
  size="small"
>
  Hello
</Text>
`;

exports[`Text sizes should render as standard 1`] = `
<Text
  baseline={true}
  size="standard"
>
  Hello
</Text>
`;

exports[`Text sizes should render as standard 2`] = `
<Text
  baseline={true}
  size="standard"
>
  Hello
</Text>
`;

exports[`Text sizes should render as subheading 1`] = `
<Text
  baseline={true}
  size="subheading"
>
  Hello
</Text>
`;

exports[`Text sizes should render as subheading 2`] = `
<Text
  baseline={true}
  size="subheading"
>
  Hello
</Text>
`;

exports[`Text sizes should render as substandard 1`] = `
<Text
  baseline={true}
  size="substandard"
>
  Hello
</Text>
`;

exports[`Text sizes should render as substandard 2`] = `
<Text
  baseline={true}
  size="substandard"
>
  Hello
</Text>
`;

exports[`Text sizes should render as superstandard 1`] = `
<Text
  baseline={true}
  size="superstandard"
>
  Hello
</Text>
`;

exports[`Text sizes should render as superstandard 2`] = `
<Text
  baseline={true}
  size="superstandard"
>
  Hello
</Text>
`;
